fix: Scrollbar style for chrome

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -19,27 +19,27 @@
     margin: 0;
     box-sizing: border-box;
 }
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
     width: 4px;
-    color:#c70039;
-    transition: all .4s ease;
 }
-::-webkit-scrollbar-thumb {
-    background: #c70039; 
-    border-radius: 4px;
-    width: 4px;
-    transition: all .4s ease;
-}
+
+/* Track */
 ::-webkit-scrollbar-track {
-    background: #101010; 
+    box-shadow: inset 0 0 5px grey;
     border-radius: 4px;
-    width: 4px;
 }
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
 }
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #d5d5d5;
+}
+
 input[type=number] {
     -moz-appearance: textfield;
 }
@@ -50,6 +50,7 @@ body{
     user-select: none;
     height: auto;
    // overflow: hidden;
+    overflow-x: hidden;
     width: 100%;
     background-color: $backgound-color;
 }
